--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -2,154 +2,143 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="ISO-8859-1">
-	<title>Modify</title>
-	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-			text-align: center;
-			background-color: #cbe3b5;
-		}
-
-		h1 {
-			padding: 10px 0;
-		}
-
-		form {
-			max-width: 650px;
-			margin: 0 auto;
-			padding: 20px;
-			background-color: #cbe3b5;
-			
-		}
-
-		input[type="text"] {
-			display: inline-block;
-			width: 30%;
-			padding: 10px;
-			margin: 5px 0;
-			border: 2px solid rgb(0, 0, 0);
-			border-radius: 5px;
-
-		}
-
-
-		input[type="file"] {
-			width: 55%;
-		}
-
-		button {
-			display: inline-block;
-			padding: 10px 20px;
-			margin: 10px 5px;
-			background-color: #333;
-			color: #fff;
-			border: none;
-			border-radius: 3px;
-			cursor: pointer;
-		}
-
-		button:hover {
-			background-color: #555;
-		}
-
-		/* Modal styles */
-		.modal {
-			display: none;
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: rgba(0, 0, 0, 0.5);
-		}
-
-		.modal-content {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			background-color: #fefefe;
-			padding: 20px;
-			border: 1px solid #888;
-			width: 300px;
-			color: red;
-		}
-
-		.close {
-			color: #aaa;
-			float: right;
-			font-size: 20px;
-			font-weight: bold;
-			cursor: pointer;
-		}
-
-		.close:hover {
-			color: black;
-		}
-
-		.registerclose {
-			width: 20%;
-			background-color: #000066;
-			color: #fff;
-			text-align: center;
-			border: 3px solid rgb(64, 0, 0);
-			border-radius: 10px;
-		}
-
-		.returnClear {
-			width: 20%;
-			background-color: orange;
-			color: #fff;
-			text-align: center;
-			border: 3px solid rgb(64, 0, 0);
-			border-radius: 10px;
-		}
-
-		.label-container {
-			display: flex;
-			width: 100%;
-		}
-
-
-		.label-container label {
-			width: 50%;
-			text-align: left;
-			margin: 10px 20px;
-
-
-		}
-
-		#adminMessage {
-			position: fixed;
-			top: 10px;
-			right: 130px;
-			color: #062d73;
-			font-size: 18px;
-			font-weight: bold;
-		}
-		
-		
-		.stmNumber {
-       height: 15px;
-       background-color:#4d4d4d;
-       color: #fff;
+<meta charset="ISO-8859-1">
+<title>Modify</title>
+<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+<style>
+body {
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	background-color: #cbe3b5;
 }
-.label-container #attachedPdf
-{
-    width:100px;
-    
-   
-}
-.label-container #attachedWord
-{
-    width:92px; 
-    
-} 
 
+h1 {
+	padding: 10px 0;
+}
+
+form {
+	max-width: 650px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #cbe3b5;
+}
+
+input[type="text"] {
+	display: inline-block;
+	width: 30%;
+	padding: 10px;
+	margin: 5px 0;
+	border: 2px solid rgb(0, 0, 0);
+	border-radius: 5px;
+}
+
+input[type="file"] {
+	width: 55%;
+}
+
+button {
+	display: inline-block;
+	padding: 10px 20px;
+	margin: 10px 5px;
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+button:hover {
+	background-color: #555;
+}
+
+/* Modal styles */
+.modal {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fefefe;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 300px;
+	color: red;
+}
+
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 20px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.close:hover {
+	color: black;
+}
+
+.registerclose {
+	width: 20%;
+	background-color: #000066;
+	color: #fff;
+	text-align: center;
+	border: 3px solid rgb(64, 0, 0);
+	border-radius: 10px;
+}
+
+.returnClear {
+	width: 20%;
+	background-color: orange;
+	color: #fff;
+	text-align: center;
+	border: 3px solid rgb(64, 0, 0);
+	border-radius: 10px;
+}
+
+.label-container {
+	display: flex;
+	width: 100%;
+}
+
+.label-container label {
+	width: 50%;
+	text-align: left;
+	margin: 10px 20px;
+}
+
+#adminMessage {
+	position: fixed;
+	top: 10px;
+	right: 130px;
+	color: #062d73;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.stmNumber {
+	height: 15px;
+	background-color: #4d4d4d;
+	color: #fff;
+}
+
+.label-container #attachedPdf {
+	width: 100px;
+}
+
+.label-container #attachedWord {
+	width: 92px;
+}
 .logout-button {
 
             display: block;
@@ -171,17 +160,19 @@
         .logout-button i {
             margin-left: 5px; 
         } 
-	</style>
+
+
+</style>
 </head>
 
 <body id="dashboardBody">
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
-<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
+	<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
     Logout
     <i>&#10142;</i> 
 </a>
-
+	
 	<h1>STM: Silicone Test Method</h1>
 	<!-- <p id="message" th:text="${message}"></p>
     <p id="message" th:text="${error}"></p> -->
@@ -199,51 +190,69 @@
 		</div>
 	</div>
 
-	<form th:action="@{/modify(ssoid = ${ssoid})}" th:object="${stm}" method="post" enctype="multipart/form-data">
+	<form th:action="@{/modify(ssoid = ${ssoid})}" th:object="${stm}"
+		method="post" enctype="multipart/form-data">
 		<div class="label-container">
-			<label for="stmNumber">STM Number<br>(Quality inspection method_master <br>quality inspection
-				characteristics)</label>
-			<input type="text" id="stmNumber" class="stmNumber" th:field="${stm.stmNo}" readonly style="height: 15px;" />
+			<label for="stmNumber">STM Number<br>(Quality inspection
+				method_master <br>quality inspection characteristics)
+			</label> <input type="text" id="stmNumber" class="stmNumber"
+				th:field="${stm.stmNo}" readonly style="height: 15px;" />
 		</div>
 
 		<div class="label-container">
-			<label for="revisionNumber">Revision Number</label>
-			<input id="revisionNumber" class="stmNumber" type="text"style="height: 15px; width: 40px; margin-left: 0px; margin-top: -6px;" th:field="${stm.stmVersion}" readonly />   Automatic renewal numbering
-			
+			<label for="revisionNumber">Revision Number</label> <input
+				id="revisionNumber" class="stmNumber" type="text"
+				style="height: 15px; width: 40px; margin-left: 0px; margin-top: -6px;"
+				th:field="${stm.stmVersion}" readonly /> Automatic renewal
+			numbering
+
 		</div>
 
 		<div class="label-container">
-			<label for="linkDestination">Link Destination(STM_parent number)</label>
-			<input type="text" id="linkDestination" class="stmNumber" th:field="${stm.linkDestination}" disabled="disabled" />
+			<label for="linkDestination">Link Destination(STM_parent
+				number)</label> <input type="text" id="linkDestination" class="stmNumber"
+				th:field="${stm.linkDestination}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
-			<label for="textJapanese">Text (Short) Japanese</label>
-			<input type="text" id="textJapanese" class="stmNumber" th:field="${stm.textShortJP}" disabled="disabled" />
+			<label for="textJapanese">Text (Short) Japanese</label> <input
+				type="text" id="textJapanese" class="stmNumber"
+				th:field="${stm.textShortJP}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
-			<label for="textEnglish">Text (Short) English</label>
-			<input type="text" id="textEnglish" class="stmNumber"th:field="${stm.textShortEN}" disabled="disabled" />
+			<label for="textEnglish">Text (Short) English</label> <input
+				type="text" id="textEnglish" class="stmNumber"
+				th:field="${stm.textShortEN}" disabled="disabled" />
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentPdf">Attachment (PDF)</label>
 			<div class="file-input">
-				<input type="text" class="stmNumber" id="attachedPdf" th:field="${stm.pdfFile}" disabled="disabled" maxlength="25" />
-				<button type="button" style="background-color:red;border-radius:5px;" onclick="document.getElementById('attachmentPdf').click()">Choose PDF File</button>
+				<input type="text" class="stmNumber" id="attachedPdf"
+					th:field="${stm.pdfFile}" disabled="disabled" maxlength="25" />
+				<button type="button"
+					style="background-color: red; border-radius: 5px;"
+					onclick="document.getElementById('attachmentPdf').click()">Choose
+					PDF File</button>
 				<input type="file" id="attachmentPdf" name="pdfFile"
-					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')" maxlength="25" style="display: none;" />
+					onchange="updatePdfFileName('attachedPdf', 'attachmentPdf', 'pdfError')"
+					maxlength="25" style="display: none;" />
 			</div>
 		</div>
 
 		<div class="label-container">
 			<label for="attachmentWord">Attachment (Word)</label>
 			<div class="file-input">
-				<input type="text" class="stmNumber" id="attachedWord" th:field="${stm.wordFile}" disabled="disabled" maxlength="25" />
-				<button type="button" style="background-color:red;border-radius:5px;" onclick="document.getElementById('attachmentWord').click()">Choose Word File</button> 
+				<input type="text" class="stmNumber" id="attachedWord"
+					th:field="${stm.wordFile}" disabled="disabled" maxlength="25" />
+				<button type="button"
+					style="background-color: red; border-radius: 5px;"
+					onclick="document.getElementById('attachmentWord').click()">Choose
+					Word File</button>
 				<input type="file" id="attachmentWord" name="wordFile"
-					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')" maxlength="25" style="display: none;" />
+					onchange="updateWordFileName('attachedWord', 'attachmentWord', 'wordError')"
+					maxlength="25" style="display: none;" />
 			</div>
 		</div>
 
@@ -263,44 +272,52 @@
 			</div>
 		</div>
 
-	   
-		<div class="label-container">
-			<label for="lastUpdated">Last Updated (Drafting Date)</label>
-			<input type="text" id="lastUpdated" th:value="${#dates.format(stm.draftingDate, 'yyyy/mm/dd')}"
-				th:field="${stm.draftingDate}" maxlength="10" required="required" pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
-				title="Please Enter Date in yyyy/mm/dd." oninput="formatInputDate(this)">
-		</div>
-	    
 
 		<div class="label-container">
-			<label for="finalDrafter">Final Drafter (Last Name)</label>
-			<input type="text" id="finalDrafter" th:field="${stm.finalDrafterName}" maxlength="50" required="required" onkeydown="enterClickkey(2,event)"
-				pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed" />
+			<label for="lastUpdated">Last Updated (Drafting Date)</label> <input
+				type="text" id="lastUpdated"
+				th:value="${#dates.format(stm.draftingDate, 'yyyy/mm/dd')}"
+				th:field="${stm.draftingDate}" maxlength="10" required="required"
+				pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
+				title="Please Enter Date in yyyy/mm/dd."
+				oninput="formatInputDate(this)">
 		</div>
 
-		<div class="label-container">
-			<label for="oldStmNumber">Old STM Number</label>
-			<input type="text" id="oldStmNumber" class="stmNumber" th:field="${stm.oldSTMNumber}" disabled="disabled" />
-		</div>
 
 		<div class="label-container">
-			<label for="remarks1">Remarks 1</label>
-			<input id="remarks1" type="text" class="stmNumber" th:field="${stm.remarks1}" disabled="disabled" />
+			<label for="finalDrafter">Final Drafter (Last Name)</label> <input
+				type="text" id="finalDrafter" th:field="${stm.finalDrafterName}"
+				maxlength="50" required="required"
+				onkeydown="enterClickkey(2,event)" pattern="^[a-zA-Z\s]+$"
+				title="Alphabet and Space only allowed" />
 		</div>
 
 		<div class="label-container">
-			<label for="note2">Note 2</label>
-			<input type="text" id="note2" class="stmNumber" th:field="${stm.note2}" disabled="disabled" />
+			<label for="oldStmNumber">Old STM Number</label> <input type="text"
+				id="oldStmNumber" class="stmNumber" th:field="${stm.oldSTMNumber}"
+				disabled="disabled" />
 		</div>
 
 		<div class="label-container">
-			<label for="note3">Note 3</label>
-			<input type="text" id="note3" class="stmNumber" th:field="${stm.note3}" disabled="disabled" />
+			<label for="remarks1">Remarks 1</label> <input id="remarks1"
+				type="text" class="stmNumber" th:field="${stm.remarks1}"
+				disabled="disabled" />
+		</div>
+
+		<div class="label-container">
+			<label for="note2">Note 2</label> <input type="text" id="note2"
+				class="stmNumber" th:field="${stm.note2}" disabled="disabled" />
+		</div>
+
+		<div class="label-container">
+			<label for="note3">Note 3</label> <input type="text" id="note3"
+				class="stmNumber" th:field="${stm.note3}" disabled="disabled" />
 		</div>
 		<div style="margin-top: 20px;">
-			<button type="button" name="action" value="modify" class="registerclose"
-				onclick="openModal('deleteConfirmation')">Modify</button>
-			<button type="button" name="action" value="return" class="returnClear"
+			<button type="button" name="action" value="modify"
+				class="registerclose" onclick="openModal('deleteConfirmation')">Modify</button>
+			<button type="button" name="action" value="return"
+				class="returnClear"
 				th:onclick="|window.location.href='@{/returnSearchPage(ssoid = ${ssoid})}'|">Return</button>
 		</div>
 		<!-- Modal for Modify confirmation -->
@@ -310,6 +327,21 @@
 				<p>Is it okay if I correct it?</p>
 				<button onclick="confirmDelete()">yes(Y)</button>
 				<button type="button" onclick="closeModal('deleteConfirmation')">no(N)</button>
+			</div>
+		</div>
+		<!-- Modal for invalid month -->
+		<div id="modalErrorMonth" class="modal">
+			<div class="modal-content">
+				<span class="close" onclick="closeModal('modalErrorMonth')">&times;</span>
+				<p>Invalid month. Please enter a valid month (1-12).</p>
+			</div>
+		</div>
+
+		<!-- Modal for invalid day -->
+		<div id="modalErrorDay" class="modal">
+			<div class="modal-content">
+				<span class="close" onclick="closeModal('modalErrorDay')">&times;</span>
+				<p>Invalid day. Please enter a valid day for the selected month.</p>
 			</div>
 		</div>
 
@@ -432,9 +464,50 @@
 	    });
 
         // Add an event listener to the date input
-        document.getElementById('lastUpdated').addEventListener('input', function () {
-            formatInputDate(this);
+         document.getElementById('lastUpdated').addEventListener('blur', function () {
+        	 validateDate(this);
         });
+         
+         function validateDate(input) {
+        	    const dateInput = input.value;
+        	    const dateArray = dateInput.split('/');
+        	    
+        	    if (dateArray.length === 3) {
+        	        const year = parseInt(dateArray[0], 10);
+        	        const month = parseInt(dateArray[1], 10);
+        	        const day = parseInt(dateArray[2], 10);
+
+        	        // Check if the month is valid
+        	        if (month < 1 || month > 12) {
+        	            openModal('modalErrorMonth');
+        	            input.value = getOriginalDate(input);
+        	          
+        	            return;
+        	        }
+
+        	        // Check if the day is valid for the given month
+        	        const daysInMonth = new Date(year, month, 0).getDate();
+        	        if (day < 1 || day > daysInMonth) {
+        	            openModal('modalErrorDay');
+        	            input.value = getOriginalDate(input);
+        	           
+        	            return;
+        	        }
+        	    } else {
+        	        openModal('modalErrorFormat');
+        	        input.value = getOriginalDate(input);
+        	        return;
+        	    }
+        	}
+         
+         function getOriginalDate(input) {
+        	    return input.getAttribute('data-original-date');
+        	}
+         document.addEventListener("DOMContentLoaded", function() {
+        	    var dateInput = document.getElementById('lastUpdated');
+        	    dateInput.setAttribute('data-original-date', dateInput.value);
+        	});
+              
 		// Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
 		var messageDuration = 5000;
 
