--- a/src/main/resources/templates/ReviseScreen.html
+++ b/src/main/resources/templates/ReviseScreen.html
@@ -89,7 +89,7 @@ button:hover {
 .close:hover {
 	color: black;
 }
-
+// added style for register button
  .registerclose {
 	width: 20%;
 	background-color: #000066;
