--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -22,12 +22,14 @@
 			text-align: center;
 			background-color: #cbe3b5;
 		}
+
 		form {
 			max-width: 600px;
 			margin: 0 auto;
 			padding: 20px;
 			background-color: #cbe3b5;
 		}
+
 		input[type="text"] {
 			display: inline-block;
 			width: 50%;
@@ -45,6 +47,10 @@
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+	<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
+		Logout
+		<i>&#10142;</i>
+	</a>
 	<!-- ADDED[E] AMULYA To To Display the ssoid-->
 
 	<h1 id=hedding>STM:silicone test method</h1>
@@ -53,11 +59,17 @@
 
 		<p style="color: green;" th:text="${message}"></p>
 	</div>
-	
+
 	<div id="errorMessageDiv" th:if="${error}">
 		<p style="color: red;" th:text="${error}"></p>
 	</div>
-	
+	<div id="modal" class="modal">
+		<div class="modal-content">
+			<span class="close" onclick="closeModal()">&times;</span>
+			<div id="modalMessage"></div>
+		</div>
+	</div>
+
 	<!--  Added for Delete page Message-->
 	<p style="text-align: center;" id="recordDisplay" th:text="${records}"></p>
 
@@ -84,8 +96,8 @@
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
-				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
-				title="Alphabet and japanese characters only allowed" />
+				pattern="[\p{Script=Hiragana}\p{Script=Katakana}\p{Script=Han}\s]*"
+				title="Only Japanese characters are allowed">
 		</div>
 
 		<div class="label-container">
@@ -102,20 +114,22 @@
 					name="startDraftDate" maxlength="10" onkeydown="enterClick(6,event)" id="draft_start_date"
 					style="margin-left: -31%;width: 49%;" title="Please Enter Date in yyyy/MM/dd."
 					oninput="formatDraftingDate(this)"
-					pattern="(19|20)\d{2}/(0[1-9]|1[0-2])/(0[1-9]|1[0-9]|2[0-9]|3[01])" />
+					pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
+					onblur="validateDate(this, 'startDraftDateError')" />
 				~
 				<input type="text" class="dobField timePeriodTo1 datepicker-input" placeholder="yyyy/MM/dd"
 					style="margin-left: 2%;width: 49%;" name="endDraftDate" maxlength="10"
 					onkeydown="enterClick(7,event)" id="draft_end_date" title="Please Enter Date in yyyy/MM/dd."
 					oninput="formatDraftingDate(this)"
-					pattern="(19|20)\d{2}/(0[1-9]|1[0-2])/(0[1-9]|1[0-9]|2[0-9]|3[01])" />
+					pattern="(?:19|20)(?:[0-9]{2}\/(?:0[1-9]|1[0-2])\/(?:0[1-9]|[12][0-9]|3[01]))"
+					onblur="validateDate(this, 'endDraftDateError')" />
+			</p>
 		</div>
 
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
-				title="Enter only character and one space." pattern="^[a-zA-Z\s]+$"
-				onkeydown="enterClick(8,event)" />
+				title="Alphabet and Space only allowed." pattern="^[a-zA-Z\s]+$" onkeydown="enterClick(8,event)" />
 		</div>
 
 		<div class="label-container">
@@ -134,8 +148,8 @@
 				th:onclick="|window.location.href='@{/dashboard(ssoid=${ssoid})}'|">Menu</button>
 		</div>
 	</form>
-	<form th:action="@{/viewClick}" method="post">
-		<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
+	<form th:action="@{/viewClick(ssoid = ${ssoid})}" method="post">
+		<!--<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />-->
 		<button type="submit" class="btn btn-primary view">View</button>
 	</form>
 	<!--	<div id="vis"  id="table1">
