--- a/src/main/resources/templates/ReviseScreen.html
+++ b/src/main/resources/templates/ReviseScreen.html
@@ -285,7 +285,7 @@ button:hover {
 
         <div class="label-container">
             <label for="finalDrafter">Final Drafter (Last Name)</label>
-            <input type="text" id="finalDrafter" th:field="*{finalDrafterName}" th:value="${finalDrafterName}" maxlength="50" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed"/>
+            <input type="text" id="finalDrafter" th:field="*{finalDrafterName}" th:value="${finalDrafterName}" maxlength="100" required="required" pattern="^[a-zA-Z\s]+$" title="Alphabet and Space only allowed"/>
         </div>
 
         <div class="label-container">
