--- a/src/main/resources/templates/LoginScreen.html
+++ b/src/main/resources/templates/LoginScreen.html
@@ -78,11 +78,13 @@
         <p th:if="${invalidCredentials}" class="error" id="errorMessage">ID or password mismatch</p>
         <div class="form-group">
             <label for="ssoid">SSO ID</label>
-            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed" maxlength="11" required>
+            <input type="text" id="ssoid" name="ssoid" autofocus="autofocus" pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				title="Alphabet, Japanese characters,number and Space only allowed" maxlength="11" required>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" pattern="[a-zA-Z0-9]*" title="Alphanumeric characters only, up to 11 characters allowed" maxlength="11" required>
+            <input type="password" id="password" name="password"  pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s!@#$%^&*()-_+=]+$"
+        title="Alphabet, Japanese characters, numbers, space, and selected special characters allowed" maxlength="11" required>
         </div>
         <div class="button-container">
             <input type="submit" value="LogIn">
