--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -288,8 +288,8 @@ button:hover {
 			<label for="finalDrafter">Final Drafter (Last Name)</label> <input
 				type="text" id="finalDrafter" th:field="${stm.finalDrafterName}"
 				maxlength="50" required="required"
-				onkeydown="enterClickkey(2,event)" pattern="^[a-zA-Z\s]+$"
-				title="Alphabet and Space only allowed" />
+				onkeydown="enterClickkey(2,event)" pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				title="Alphabet, Japanese characters, and Space only allowed" />
 		</div>
 
 		<div class="label-container">
