--- a/src/main/resources/templates/UserDashBoard.html
+++ b/src/main/resources/templates/UserDashBoard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
 <body id="dashboardBody">
