@vineet Update ModifyScreen.html

--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -324,7 +324,7 @@ button:hover {
 		<div id="deleteConfirmation" class="modal">
 			<div class="modal-content">
 				<span class="close-modal" onclick="closeModal('deleteConfirmation')">&times;</span>
-				<p>Is it okay if I correct it?</p>
+				<p>Is it okay to modify it?</p>
 				<button onclick="confirmDelete()">yes(Y)</button>
 				<button type="button" onclick="closeModal('deleteConfirmation')">no(N)</button>
 			</div>
