--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -78,7 +78,8 @@
 			<label for="stmNumber">STM Number <br>(Quality inspection
 				method_master quality inspection characteristics)
 			</label> <input type="text" id="stmNumber" name="stmNo" maxlength="15" onkeydown="enterClick(1,event)"
-				pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" style="margin-top: 3%;" />
+				pattern="[a-zA-Z0-9\u3040-\u30FF]*" title="Enter only Alphanumeric and Japanese Characters."
+				style="margin-top: 3%;" />
 		</div>
 
 		<div class="label-container">
@@ -90,20 +91,22 @@
 		<div class="label-container">
 			<label for="linkDestination">Link Destination(STM_parent number)</label>
 			<input type="text" id="Link destination" name="linkDestination" maxlength="15"
-				onkeydown="enterClick(3,event)" pattern="[a-zA-Z0-9]+" title="Enter only Characters and Numbers" />
+				onkeydown="enterClick(3,event)"
+				pattern="^[a-zA-Z0-9\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF]+$"
+				title="Enter only Alphanumeric and Japanese Characters." />
 		</div>
 
 		<div class="label-container">
 			<label for="textJapanese">Text (Short) Japanese</label>
 			<input type="text" id="Japanese" name="textShortJP" maxlength="200" onkeydown="enterClick(4,event)"
-				pattern="[\p{Script=Hiragana}\p{Script=Katakana}\p{Script=Han}\s]*"
-				title="Only Japanese characters are allowed">
+				pattern="^[\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s。]+$"
+				title="Enter Only Japanese characters."/>
 		</div>
 
 		<div class="label-container">
 			<label for="textEnglish">Text (Short) English</label>
 			<input type="text" id="English" name="textShortEN" maxlength="200" pattern="[a-zA-Z]*"
-				title="Enter only Characters" onkeydown="enterClick(5,event)" />
+				title="Please input alphabet characters only" onkeydown="enterClick(5,event)" />
 		</div>
 
 		<div class="label-container">
@@ -129,13 +132,14 @@
 		<div class="label-container">
 			<label for="finalDrafter">Final Drafter (Last Name)</label>
 			<input type="text" id="finalDrafterName" name="finalDrafterName" max="100"
-				title="Alphabet and Space only allowed." pattern="^[a-zA-Z\s]+$" onkeydown="enterClick(8,event)" />
+				title="Enter only Characters,Japanese and Space only allowed."
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$" onkeydown="enterClick(8,event)" />
 		</div>
 
 		<div class="label-container">
 			<label for="oldStmNumber">Old STM Number</label>
-			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9]+"
-				title="Enter only Characters and Numbers" onkeydown="enterClick(9,event)" />
+			<input type="text" id="oldSTMnumber" name="oldSTMNumber" maxlength="15" pattern="[a-zA-Z0-9\u3040-\u30FF]*"
+				title="Enter only Alphanumeric and Japanese Characters."  onkeydown="enterClick(9,event)" />
 		</div>
 
 		<div style="display: flex; justify-content: space-between; margin-top: 100px;">
