--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -62,6 +62,7 @@ button:hover {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
+	/*  background-color: transparent; */
 }
 
 .modal-content {
@@ -69,23 +70,53 @@ button:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #fefefe;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 300px;
-	color: red;
+	width: 500px;
+	background-color: transparent;
+	border: none;
 }
 
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 20px;
+.upper-part {
+	background-color: #3399ff;
+	padding: 20px;
+	border-bottom: 1px solid #888;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.upper-part p {
+	margin: 0;
 	font-weight: bold;
+	color: white;
+}
+
+.error-message {
+	background-color: #e6e6e6;
+	padding: 20px;
+	color: black;
+}
+
+.close-modal {
+	font-size: 30px;
+	color: red;
 	cursor: pointer;
 }
 
-.close:hover {
-	color: black;
+.close-modal:hover {
+	color: darkred;
+}
+
+.modal-content button {
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	margin: 5px;
+}
+
+.modal-content button:hover {
+	background-color: #555;
 }
 
 .registerclose {
@@ -139,29 +170,27 @@ button:hover {
 .label-container #attachedWord {
 	width: 92px;
 }
+
 .logout-button {
+	display: block;
+	width: 80px;
+	padding: 10px;
+	margin: 5px 0;
+	background-color: #000066;
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
+	border: 3px solid rgb(64, 0, 0);
+	border-radius: 10px;
+	position: fixed;
+	top: 10px;
+	right: 10px;
+}
 
-            display: block;
-            width: 80px;
-            padding: 10px;
-            margin: 5px 0;
-            background-color: #000066;
-            color: #fff;
-            text-decoration: none;
-            text-align: center;
-            border: 3px solid rgb(64, 0, 0);
-            border-radius: 10px;
-            position: fixed;
-            top: 10px;
-            right: 10px;
-        }
-
-        /* Style for the arrow inside the button */
-        .logout-button i {
-            margin-left: 5px; 
-        } 
-
-
+/* Style for the arrow inside the button */
+.logout-button i {
+	margin-left: 5px;
+}
 </style>
 </head>
 
@@ -169,10 +198,9 @@ button:hover {
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 	<a th:href="@{/login}" class="logout-button" onclick="logoutFunction()">
-    Logout
-    <i>&#10142;</i> 
-</a>
-	
+		Logout <i>&#10142;</i>
+	</a>
+
 	<h1>STM: Silicone Test Method</h1>
 	<!-- <p id="message" th:text="${message}"></p>
     <p id="message" th:text="${error}"></p> -->
@@ -259,16 +287,32 @@ button:hover {
 		<!-- Modal for PDF error -->
 		<div id="pdfError" class="modal">
 			<div class="modal-content">
-				<span class="close-modal" onclick="closeModal('pdfError')">&times;</span>
-				<p>Invalid file format. Please select a PDF file.</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('pdfError')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid file format. Please select a PDF file.</p>
+				</div>
+			</div>
+		</div>
+		<div id="modal" class="modal">
+			<div class="modal-content">
+				<span class="close" onclick="closeModal()">&times;</span>
+				<div id="modalMessage"></div>
 			</div>
 		</div>
 
-		<!-- Modal for Word error -->
 		<div id="wordError" class="modal">
 			<div class="modal-content">
-				<span class="close-modal" onclick="closeModal('wordError')">&times;</span>
-				<p>Invalid file format. Please select a Word file (doc or docx).</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('wordError')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid file format. Please select a Word file (doc or
+						docx).</p>
+				</div>
 			</div>
 		</div>
 
@@ -288,7 +332,8 @@ button:hover {
 			<label for="finalDrafter">Final Drafter (Last Name)</label> <input
 				type="text" id="finalDrafter" th:field="${stm.finalDrafterName}"
 				maxlength="50" required="required"
-				onkeydown="enterClickkey(2,event)" pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
+				onkeydown="enterClickkey(2,event)"
+				pattern="^[a-zA-Z\u3040-\u30FF\u31F0-\u31FF\u4E00-\u9FAF\u3400-\u4DBF\s]+$"
 				title="Alphabet, Japanese characters, and Space only allowed" />
 		</div>
 
@@ -315,33 +360,49 @@ button:hover {
 		</div>
 		<div style="margin-top: 20px;">
 			<button type="button" name="action" value="modify"
-				class="registerclose" onclick="openModal('deleteConfirmation')">Modify</button>
+				class="registerclose" onclick="openModal('modifyConfirmation')">Modify</button>
 			<button type="button" name="action" value="return"
 				class="returnClear"
 				th:onclick="|window.location.href='@{/returnSearchPage(ssoid = ${ssoid})}'|">Return</button>
 		</div>
 		<!-- Modal for Modify confirmation -->
-		<div id="deleteConfirmation" class="modal">
+		<div id="modifyConfirmation" class="modal">
 			<div class="modal-content">
-				<span class="close-modal" onclick="closeModal('deleteConfirmation')">&times;</span>
-				<p>Is it okay to modify it?</p>
-				<button onclick="confirmDelete()">yes(Y)</button>
-				<button type="button" onclick="closeModal('deleteConfirmation')">no(N)</button>
+				<div class="upper-part">
+					<p>Check for Modifications</p>
+					<span class="close-modal"
+						onclick="closeModal('modifyConfirmation')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Is it okay to modify it?</p>
+					<button onclick="confirmModify()">yes(Y)</button>
+					<button type="button" onclick="closeModal('modifyConfirmation')">no(N)</button>
+				</div>
 			</div>
 		</div>
 		<!-- Modal for invalid month -->
 		<div id="modalErrorMonth" class="modal">
 			<div class="modal-content">
-				<span class="close" onclick="closeModal('modalErrorMonth')">&times;</span>
-				<p>Invalid month. Please enter a valid month (1-12).</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('modalErrorMonth')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid month. Please enter a valid month (1-12).</p>
+				</div>
 			</div>
 		</div>
-
 		<!-- Modal for invalid day -->
 		<div id="modalErrorDay" class="modal">
 			<div class="modal-content">
-				<span class="close" onclick="closeModal('modalErrorDay')">&times;</span>
-				<p>Invalid day. Please enter a valid day for the selected month.</p>
+				<div class="upper-part">
+					<p>error</p>
+					<span class="close-modal" onclick="closeModal('modalErrorDay')">&times;</span>
+				</div>
+				<div class="error-message">
+					<p>Invalid day. Please enter a valid day for the selected
+						month.</p>
+				</div>
 			</div>
 		</div>
 
@@ -369,10 +430,10 @@ button:hover {
 			const modal = document.getElementById(modalId);
 			modal.style.display = 'none';
 		}
-		function confirmDelete() {
-			console.log("Confirming Delete...");
-			closeModal('deleteConfirmation');
-			document.getElementById('deleteForm').submit();
+		function confirmModify() {
+			console.log("Confirming Modify...");
+			closeModal('modifyConfirmation');
+			document.getElementById('modifyForm').submit();
 		}
 
 		var stmNo = document.getElementById('stmNumber').value;
