--- a/src/main/resources/templates/DeleteScreen.html
+++ b/src/main/resources/templates/DeleteScreen.html
@@ -149,6 +149,71 @@ button:hover {
         .logout-button i {
             margin-left: 5px; 
         } 
+        #deleteConfirmation .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        #deleteConfirmation .modal-content {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 300px;
+            background-color: transparent; 
+            padding: 20px;
+            border: none;
+            color: red;
+        }
+
+        #deleteConfirmation .upper-part {
+            background-color: #3399ff; 
+            padding: 20px;
+            border-bottom: 1px solid #888;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        #deleteConfirmation .upper-part p {
+            margin: 0;
+            font-weight: bold;
+            color: white;
+        }
+
+        #deleteConfirmation .error-message {
+            background-color: #e6e6e6;
+            padding: 20px;
+            color: black;
+        }
+
+        #deleteConfirmation .close-modal {
+            font-size: 30px;
+            color: red;
+            cursor: pointer;
+        }
+
+        #deleteConfirmation .close-modal:hover {
+            color: darkred;
+        }
+
+        #deleteConfirmation button {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            margin: 5px;
+        }
+
+        #deleteConfirmation button:hover {
+            background-color: #555;
+        }      
 
 </style>
 </head>
@@ -236,19 +301,24 @@ button:hover {
             <input type="text" id="note3"  class="stmNumber" th:field="${stm.note3}" disabled="disabled"/>
         </div>
         <div style="margin-top: 20px;">
-            <button type="button" name="action" value="modify" class="registerclose" onclick="openModal('modifyConfirmation')">Delete</button>
+            <button type="button" name="action" value="delete" class="registerclose" onclick="openModal('deleteConfirmation')">Delete</button>
             <button type="button" name="action" value="return" class="returnClear" th:onclick="|window.location.href='@{/returnSearchPage(ssoid = ${ssoid})}'|">Return</button>
         </div>
         
-    <!-- Modal for Modify confirmation -->
-        <div id="modifyConfirmation" class="modal">
-         <div class="modal-content">
-         <span class="close-modal" onclick="closeModal('modifyConfirmation')">&times;</span>
-         <p>Are you sure you want to delete it?</p>
-         <button onclick="confirmModify()">yes(Y)</button>
-         <button type="button" onclick="closeModal('modifyConfirmation')">no(N)</button>
-         </div>
+    <!-- Modal for Delete confirmation -->
+       <div id="deleteConfirmation" class="modal">
+    <div class="modal-content" style="width:300px;">
+        <div class="upper-part">
+            <p>Confirm Deletion</p> 
+            <span class="close-modal" onclick="closeModal('deleteConfirmation')">&times;</span>
         </div>
+        <div class="error-message">
+            <p>Are you sure you want to delete it?</p>
+            <button onclick="confirmDelete()">Yes (Y)</button>
+            <button type="button" onclick="closeModal('deleteConfirmation')">No (N)</button>
+        </div>
+    </div>
+</div>
         
     </form>
 
@@ -274,11 +344,11 @@ button:hover {
 			const modal = document.getElementById(modalId);
 			modal.style.display = 'none';
 		}
-		function confirmModify() {
-		    console.log("Confirming revise...");
-		    closeModal('modifyConfirmation');		    
-		    document.getElementById('deleteForm').submit();
-		}
+		function confirmDelete() {
+	        console.log("Confirming deletion...");
+	        closeModal('deleteConfirmation');
+	        document.getElementById('deleteForm').submit();
+	    }
 </script>
 </body>
 </html>
