--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -35,7 +35,8 @@
 			margin: 5px 0;
 			border: 2px solid rgb(0, 0, 0);
 			border-radius: 5px;
-			font-weight: 700;
+		    background-color: #4d4d4d;
+		    color: white;
 		}
 		input[type="file"] {
 			width: 55%;
@@ -105,10 +106,10 @@
 			<label for="pdfFileName">Attachment (PDF)</label>
 			<div class="file-input">
 				<input type="text" id="pdfFileName" disabled="disabled" th:value="${entValue.pdfFile}" name="pdfFileName"
-					style="width: 37%;" />
+					style="width: 37%;color: white;">
 				<input type="hidden" id="pdfFileNameHid" th:value="${entValue.pdfFile}" name="pdfFileName">
 				<button type="button" class="download-button" onclick="downloadPDF()" id="pdfFileName"
-					style="margin-left: 6px;width: 38%;text-align: start" th:value="${pdf}">PdfDownload</button>
+					style="margin-left: 6px;width: 38%;" th:value="${pdf}">PdfDownload</button>
 			</div>
 		</div>
 
