--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -167,7 +167,7 @@
 	</form>
 
 	<div class="table-responsive table-layout" style="margin-left: 2%;margin-right: 1%;">
-		<table class="table" id="searchTable" title="Confidential information">
+		<table class="table" id="searchTable" title="Confidential information" style="width: 100%;">
 			<thead style="text-align: center;">
 				<tr>
 					<th>No</th>
